[project]
name = "komo-load"
version = "0.1"
description = "A simple komorebi loading script"

[tool.cxfreeze]
executables = [
    "komo-launch.py",
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["rich", "tomlkit", "markdown-it-py", "mdurl", "prompt_toolkit", "Pygments", "questionary", "wcwidth"]